[gd_scene load_steps=3 format=3 uid="uid://hmoun1h35j3h"]

[ext_resource type="Script" path="res://Scripts/text_trigger.gd" id="1_8wnux"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3rfc8"]
size = Vector2(64, 64)

[node name="TextTrigger" type="Area2D"]
collision_layer = 0
collision_mask = 2
script = ExtResource("1_8wnux")

[node name="Collision" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_3rfc8")

[node name="CamOffsetLine" type="Line2D" parent="."]
points = PackedVector2Array(0, 0, 0, 0)
width = 6.0
default_color = Color(1, 1, 1, 0.32549)

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
